# products-fastapi

./: .gitignore  README.md  alembic.ini  pyproject.toml  tasks.py
migrations/: env.py
src/app/: main.py  routers.py
src/app/controllers/: __init__.py  product_controller.py
src/app/core/: __init__.py  database.py  settings.py
src/app/exceptions/: __init__.py  exceptions.py
src/app/handlers/: __init__.py  exception_handlers.py
src/app/models/: __init__.py  base_model.py  client_model.py  product_model.py
src/app/repositories/: __init__.py  base_repository.py  client_repository.py  product_repository.py
src/app/schemas/: __init__.py  base.py  client_schema.py  product_schema.py
src/app/services/: __init__.py  product_service.py
