[project]
name = "products-fastapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "invoke>=2.2.1",
]
